2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Implemented nick completion.
	Added NSRange utility functions.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, channel members may go missing in the member list when they change their nicks to identical ones.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Changed conditions for enabling disconnect and cancel reconnecting menus.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Tweaked boxed types.

2007-07-23  Satoshi Nakagawa <artension@gmail.com>

	Released 0.5.
	Fixed a bug, talk messages are not printed in talk frames.

2007-07-22  Satoshi Nakagawa <artension@gmail.com>

	Released 0.4.
	Added GPL.txt to dmg.

2007-07-22  Satoshi Nakagawa <artension@gmail.com>

	Added options of connect, disconnect, join and leave on double click.

2007-07-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to ensure server dialogs and channel dialogs are in visibleRect of the screen.
	Added utility functions to NSRect, NSSize and NSPoint.

2007-07-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to place server dialogs and channel dialogs in center of the main window.

2007-07-22  Satoshi Nakagawa <artension@gmail.com>

	Added quitting confirmation when there are some DCC file transfers.

2007-07-21  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, file sending maybe disconnected before complete.

2007-07-21  Satoshi Nakagawa <artension@gmail.com>

	Changed to avoid calling reloadData in reloadData.
	Removed RUBYCOCOA_THREAD_HOOK_DISABLE = 1.

2007-07-21  Satoshi Nakagawa <artension@gmail.com>

	Moved RUBYCOCOA_THREAD_HOOK_DISABLE = 1 to main.m.

2007-07-20  Satoshi Nakagawa <artension@gmail.com>

	Changed initial location of windows.

2007-07-15  Satoshi Nakagawa <artension@gmail.com>

	Added an option, confirm to quit the application.
	Changed to display 'specify address' caption in gray color when it is disabled.

2007-07-15  Satoshi Nakagawa <artension@gmail.com>
